--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "TAP-Web-App",
   "version": "0.1.0",
   "devDependencies": {
-    "grunt": "~0.3.17",
-    "grunt-css": "~0.3.2"
+    "grunt": "~0.4.0",
+    "grunt-css": "~0.5.4",
+    "grunt-contrib-concat": "~0.1.3",
+    "grunt-contrib-jshint": "~0.1.1",
+    "grunt-contrib-uglify": "~0.1.1",
+    "grunt-contrib-watch": "~0.2.0",
+    "grunt-contrib-requirejs": "~0.4.0"
   }
 }
