--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
     "name": "TAP-Web-App",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "devDependencies": {
         "grunt": "~0.4.0",
         "grunt-css": "~0.5.4",
+        "grunt-contrib-concat": "~0.3.0",
         "grunt-contrib-jshint": "~0.1.1",
-        "grunt-contrib-requirejs": "~0.4.0",
         "grunt-contrib-copy": "~0.4.0"
     }
 }
