--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
         "grunt-contrib-concat": "~0.3.0",
         "grunt-contrib-jshint": "~0.1.1",
         "grunt-contrib-copy": "~0.4.0",
-        "grunt-string-replace": "~0.2.7"
+        "grunt-string-replace": "~0.2.7",
+        "grunt-sass": "~1.0.0",
+        "grunt-contrib-watch": "~0.6.0",
+        "autoprefixer-core": "~5.2.1",
+        "grunt-postcss": "~0.5.5"
     }
 }
